# post_irp

./: .flake8  .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  tests.yml
cpp_inference_engine/: CMakeLists.txt  Dockerfile  Makefile
cpp_inference_engine/api/: rest_api.py
cpp_inference_engine/cpp/: CMakeLists.txt
cpp_inference_engine/cpp/data/: canonical_firms.msgpack  complex_candidate_templates.msgpack  complex_candidates.csv  std_candidate_templates.msgpack  std_candidates.csv  val_comp_ids.csv  val_std_ids.csv
cpp_inference_engine/cpp/include/email_predictor/: catboost_template_predictor.hpp  email_prediction_engine.hpp  light_gbm_template_predictor.hpp  template_prediction.hpp
cpp_inference_engine/cpp/model/: comp_catboost_model.cbm  comp_lightgbm_model.txt  std_catboost_model.cbm  std_lightgbm_model.txt
cpp_inference_engine/cpp/src/: bindings.cpp
cpp_inference_engine/cpp/src/data_loader/: templates_loader.hpp
cpp_inference_engine/cpp/src/email_predictor/: base_template_predictor.hpp  catboost_template_predictor.cpp  email_prediction_engine.cpp  light_gbm_template_predictor.cpp
cpp_inference_engine/cpp/src/email_predictor/domain_resolver/: domain_resolver.cpp  domain_resolver.hpp
cpp_inference_engine/cpp/src/email_predictor/features/: investor_feature_extractor.cpp  investor_feature_extractor.hpp  name_feature_constants.hpp
cpp_inference_engine/cpp/src/email_predictor/features/builder/: feature_matrix_builder.cpp  feature_matrix_builder.hpp
cpp_inference_engine/cpp/src/email_predictor/local_part_resolver/: resolve_email_local_part.cpp  resolve_email_local_part.hpp
cpp_inference_engine/cpp/src/email_predictor/name_decomposer/: name_decomposer.cpp  name_decomposer.hpp
cpp_inference_engine/cpp/src/string_normalization/: normalize.hpp  splitter.cpp  splitter.hpp
cpp_inference_engine/scripts/: build.sh  run_bechmark_test.sh  run_integration_test.sh  sql_dump.py  stop_server.sh
cpp_inference_engine/tests/: CMakeLists.txt  failed_ids_catboost.csv  failed_template_catboost.csv  test_api_integration.py  test_benchmark_api_with_verification.py  test_domain_resolver.cpp  test_email_template_predictor.cpp  test_engine_integration.cpp  test_feature_matrix_builder.cpp  test_german_char_normalization.cpp  test_investor_feature_extractor.cpp  test_name_decomposer.cpp  test_nfkd_normalize.cpp  test_python_bindings_integration.py  test_resolve_email_local_part.cpp  test_string_splitter.cpp  test_template_loader.cpp  test_template_token_parsing.cpp  test_to_lower.cpp  test_unseen_validation.cpp  test_utilities.hpp
cpp_inference_engine/tests/test_data/: domain_resolver_test_data.csv  generate_domain_resolver_test_data.py  generate_dummy_model.py  generate_integration_test_data.py  generate_nameparser_test_set.py  lgbm_model.txt  raw_names.xlsx  test_comp_ids.csv  test_std_ids.csv
db/: __init__.py  db.py  models.py
db/migrations/: __init__.py  add_new_features.py  add_shared_flags.py  migrator.py
deliverables/: README.md
email_prediction/: __init__.py  cat_boost_training.py  pipeline.py
email_prediction/feature_engineering/: __init__.py  pipeline.py
email_prediction/feature_engineering/features/: __init__.py  feature_builder.py  split_and_stratify.py
email_prediction/feature_engineering/padding/: __init__.py  firm_profiler.py  generate_synthetic_investors.py
etl/: __init__.py  pipeline.py
etl/extract/: __init__.py  extractor.py
etl/load/: __init__.py  loader.py  validator.py
etl/transform/: __init__.py  cleaning.py  standardise.py  transformer.py  validate.py
frontend/: .gitignore  package-lock.json  package.json
frontend/docs/: PostGreSetup.md
frontend/prisma/: schema.prisma
frontend/scripts/: generate_seed_firms.py  init_db.sh  rebuild_db.sh
frontend/src/app/: page.tsx
frontend/src/hooks/: useClickOutside.ts
fuzzlookup/: __init__.py  cache_builder.py  canonical_builder.py  resolver.py
logbook/: logbook.md
notebooks/EDA/: EDA_Combined.ipynb  EDA_GP.ipynb  EDA_LP.ipynb
notebooks/EDA/export/stats/: ambiguous_duplicates_top50_gp.xlsx  ambiguous_duplicates_top50_lp.xlsx  career_move_stats_top20_gp.xlsx  (+5 more)
notebooks/ModelDevelopment/: 404Templates.ipynb  AblationAndPlacebo.ipynb  Benchmarking.ipynb  CatBoostComplex.ipynb  CatboostBenchMarkStd.ipynb  ComplexNameModel.ipynb  HyperparameterTuning.ipynb  PaddedTraining.ipynb  StandardNameModel.ipynb  TestResults.ipynb  failed_ids_catboost.csv  failed_template_catboost.csv
notebooks/ModelDevelopment/Testing/: CulturalBias.ipynb  FeatureAblation.ipynb  FeatureImportance.ipynb  FinalTrainingWithNoRareTemplates.ipynb  GPDataTraining.ipynb  GeneraliseToUnseenFirms.ipynb  PrunedTemplateList.ipynb  SyntheticPlacebokTesting.ipynb  TrainingTwoModelsFullData.ipynb
notebooks/ModelDevelopment/splits/: firm_held_test_ids.csv  firm_held_train_ids.csv  firm_held_val_ids.csv  test_ids.csv  test_ids_complex_only.csv  test_ids_standard_only.csv  train_ids.csv  train_ids_cult_bias.csv  val_ids.csv  val_ids_cult_bias.csv
notebooks/PatternMining/: template_coverage.ipynb
pattern_mining/: __init__.py  pipeline.py
pattern_mining/data_enrichment/: __init__.py  add_name_characteristics.py  build_firm_template_map.py  enrich_candidates.py
pattern_mining/rule_mining/: __init__.py  template_rule_miner.py
pattern_mining/template_encoders/: __init__.py  domain_template_decoder.py  email_template_encoder.py  reverse_nickname_map.py
tests/: conftest.py  test_add_name_characteristics.py  test_build_firm_template_map.py  test_cache_builder.py  test_canonical_builder.py  test_cleaning.py  test_db.py  test_domain_template_encoder.py  test_email_template_encoder.py  test_enrich_candidate_sequence.py  test_feature_builder.py  test_feature_engineering_pipeline.py  test_firm_profiler.py  test_firm_resolver.py  test_loader.py  test_padd_with_synthetic.py  test_pattern_mining_pipeline.py  test_split_ids.py  test_standardise.py  test_template_rule_miner.py  test_transformer.py  test_validate.py  test_validator.py
title/: title.toml
(+9 files in other folders)
