[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "unlocking-global-capital"
version = "0.1.0"
description = "An AI-powered pipeline that mines email templates from proprietary investor data and delivers sub-50 ms, verified address predictions via a Dockerized API or Python/C++ SDK."
authors = ["Daniel Bowman <db1724@ic.ac.uk>"]
readme = "README.md"
license = "Proprietary"
repository = "https://github.com/ese-ada-lovelace-2024/irp-db1724"
packages = [
  { include = "db" }
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0"
pandas = "^2.3.0"
sqlalchemy = "^2.0.41"
matplotlib = "^3.10.3"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
scipy = "^1.15.3"
spmf = "^1.4"
nameparser = "^1.1.3"
tqdm = "^4.67.1"
lightgbm = "^4.6.0"
scikit-learn = "^1.7.0"
ipympl = "^0.9.7"
livelossplot = "^0.5.6"
pyarrow = "^20.0.0"
openai = "^1.95.1"
catboost = "^1.2.8"
pybind11 = "^2.11.0"
pytest = "^7.0"
fastapi = "^0.116.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
init-db = "db.db:init_db"
